--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.2",
-        "mongoose": "^8.0.0"
+        "mongoose": "^8.0.0",
+        "twilio": "^5.10.7"
     },
     "devDependencies": {
         "nodemon": "^3.0.1"
