--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.0.0",
+        "multer": "^2.0.2",
         "twilio": "^5.10.7"
     },
     "devDependencies": {
